samples/_failures_safe/1761317425_b8056e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ab4adcc.c: In function ‘main’:
./samples/SAFE/__tmp_1ab4adcc.c:154:13: error: expected ‘:’ or ‘...’ at end of input
  154 |             case 2
      |             ^~~~
./samples/SAFE/__tmp_1ab4adcc.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ab4adcc.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ab4adcc.c:154:13: error: expected declaration or statement at end of input
